--- a/202107.md
+++ b/202107.md
@@ -1,4 +1,42 @@
 ## 20210701
+Introduction to Redis
+Redis的介绍
 
+Redis is an open source (BSD licensed), in-memory data structure store, used as a database, cache, and message broker. Redis provides data structures such as strings, hashes, lists, sets, sorted sets with range queries, bitmaps, hyperloglogs, geospatial indexes, and streams. Redis has built-in replication, Lua scripting, LRU eviction, transactions, and different levels of on-disk persistence, and provides high availability via Redis Sentinel and automatic partitioning with Redis Cluster.
+
+Redis是一种BSB协议的开源、内存数据结构存储，用作数据库、缓存、和消息代理。Redis提供了字符串,哈希、列表、集合、有序集合、带范围的排序集合，位图、
+
+
+Redis 是一种开源（BSD 许可）、内存中数据结构存储，用作数据库、缓存和消息代理。Redis 提供了诸如 字符串、散列、列表、集合、带范围查询的排序集合、位图、超级日志、地理空间索引和流等数据结构。Redis 内置了复制、Lua 脚本、LRU 驱逐、事务和不同级别的磁盘持久化，并通过Redis Sentinel和Redis Cluster自动分区。
+
+
+
+
+## 20210702
+
+You can run atomic operations on these types, like appending to a string; incrementing the value in a hash; pushing an element to a list; computing set intersection, union and difference; or getting the member with highest ranking in a sorted set.
+
+To achieve top performance, Redis works with an in-memory dataset. Depending on your use case, you can persist your data either by periodically dumping the dataset to disk or by appending each command to a disk-based log. You can also disable persistence if you just need a feature-rich, networked, in-memory cache.
+
+Redis also supports asynchronous replication, with very fast non-blocking first synchronization, auto-reconnection with partial resynchronization on net split.
+
+Other features include:
+
+- Transactions
+- Pub/Sub
+- Lua scripting
+- Keys with a limited time-to-live
+- LRU eviction of keys
+- Automatic failover
+- You can use Redis from most programming languages.
+
+Redis is written in ANSI C and works in most POSIX systems like Linux, *BSD, and OS X, without external dependencies. Linux and OS X are the two operating systems where Redis is developed and tested the most, and we recommend using Linux for deployment. Redis may work in Solaris-derived systems like SmartOS, but the support is best effort. There is no official support for Windows builds.
+
+
+1. 
+2. 
+3. 
+4. 
+5. 
 
 ## 20210702 
