--- a/202107.md
+++ b/202107.md
@@ -39,4 +39,11 @@ Redis is written in ANSI C and works in most POSIX systems like Linux, *BSD, and
 4. 
 5. 
 
-## 20210702 
+## 20210715
+
+Here you can control cookies using the checkboxes below. Some cookies are essential for the use of our website and cannot be disabled. Others provide a convenience to the user and, if disabled, may reduce the ease of use of our site. Finally, some cookies provide anonymous analytic tracking data that help us provide the user with a richer browsing experience. You can elect to disable these cookies as well.
+
+Cookie Type
+Essential: Used to record GDPR peferences, manage shopping cart sessions
+Functional: Used to pre-fill forms, easily find new forum posts
+Analytical: Used to anonymously track page visits and site usage
